--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 
       <!-- SKILLS SECTION -->
-      <section id="Hábilidades" class="fade">
+      <section id="habilidades" class="fade">
         <div class="container mw-80vw">
           <div class="py-5 mw-100">
             <h2 class="text-center display-5 fw-bold">Hábilidades</h2>
@@ -186,7 +186,7 @@
             <div class="row">
               <div class="col-12 col-md-6 mb-5">
                 <div class="accordion">
-                  <div class="accordion-item with-80-percent bg-dark">
+                  <div class="accordion-item with-80-percent">
                     <h2 class="accordion-header" id="headingOne">
                       <button
                         class="accordion-button"
@@ -268,7 +268,7 @@
               <!-- DEV TOOLS PROGRESS -->
               <div class="col-12 col-md-6 mb-5"> 
                 <div class="accordion">
-                  <div class="accordion-item with-80-percent bg-dark">
+                  <div class="accordion-item with-80-percent">
                     <h2 class="accordion-header" id="headingTwo">
                       <button
                         class="accordion-button"
