Aligment section corrected, Spacing between text and button enhanced, Titles to icons added

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             >
               <div class="text-container">
                 <div class="container pt-5">
-                  <h2 class="text-start display-5 fw-bold text-uppercase">
+                  <h2 class= display-5 fw-bold text-uppercase">
                     Conóceme
                   </h2>
                   <h4 class="fw-bold"><i>Desarrollador Front-end</i></h4>
@@ -208,7 +208,10 @@
                       data-bs-parent="#frontEnd"
                     >
                       <div class="accordion-body">
-                        <img src="./resources/html-5.png" class="icon" alt="Html5 icon">
+                        <div class="accordion-title">
+                          <img src="./resources/html-5.png" class="icon" alt="Html5 icon">
+                          <p>Html5</p>
+                        </div>
                         <div class="progress">
                           <div
                             class="progress-bar progress-bar-striped progress-bar-animated"
@@ -221,7 +224,10 @@
                             80%
                           </div>
                         </div>
-                        <img src="./resources/css-3.png" class="icon" alt="Css3 icon">
+                        <div class="accordion-title">
+                          <img src="./resources/css-3.png" class="icon" alt="Css3 icon">
+                          <p>Css3</p>
+                        </div>
                         <div class="progress">
                           <div
                             class="progress-bar progress-bar-striped progress-bar-animated"
@@ -234,7 +240,10 @@
                             60%
                           </div>
                         </div>
-                        <img src="./resources/bootstrap.svg" class="icon" alt="Bootstrap icon">
+                        <div class="accordion-title">
+                          <img src="./resources/bootstrap.svg" class="icon" alt="Bootstrap icon">
+                          <p>Bootstrap</p>
+                        </div>
                         <div class="progress">
                           <div
                             class="progress-bar progress-bar-striped progress-bar-animated"
@@ -247,7 +256,10 @@
                             60%
                           </div>
                         </div>
-                        <img src="./resources/js.png" class="icon" alt="javascript icon">
+                        <div class="accordion-title">
+                          <img src="./resources/js.png" class="icon" alt="javascript icon">
+                          <p>Javascript</p>
+                        </div>
                         <div class="progress">
                           <div
                             class="progress-bar progress-bar-striped progress-bar-animated"
@@ -291,7 +303,10 @@
                       data-bs-parent="#design"
                     >
                       <div class="accordion-body">
-                        <img src="./resources/git.png" class="icon" alt="Git icon">
+                        <div class="accordion-title">
+                          <img src="./resources/git.png" class="icon" alt="Git icon">
+                          <p>Git</p>
+                        </div>
                         <div class="progress">
                           <div
                             class="progress-bar progress-bar-striped progress-bar-animated"
@@ -304,7 +319,12 @@
                             40%
                           </div>
                         </div>
-                        <img src="./resources/terminal.png" class="icon" alt="Terminal icon">
+                        <div class="accordion-title">
+                          <div class="accordion-title">
+                            <img src="./resources/terminal.png" class="icon" alt="Terminal icon">
+                            <p>Cmd</p>
+                          </div>
+                        </div>
                         <div class="progress">
                           <div
                             class="progress-bar progress-bar-striped progress-bar-animated"
@@ -326,7 +346,7 @@
           </div>
 
           <!-- LEARNING -->
-          <div id="current-next" class="mw-100-percent">
+          <div id="current-next" >
             <div class="row">
               <div class="col-12">
                 <div class="container py-5">
@@ -391,7 +411,7 @@
             </div>
             <div class="container center mw-100-percent">
               <div class="grid">
-                <div class="container text-start">
+                <div class="container">
                   <p class="fw-bold">TÉCNICO EN SISTEMAS</p>
                   <p class="text-regular-gray">IFTS N°4</p>
                   <p class="text-light-gray">2018 - Actual</p>
@@ -407,12 +427,12 @@
                   <span class="rounder"></span>
                   <span class="line"></span>
                 </div>
-                <div class="container text-end">
-                  <p class="fw-bold">BOOTCAMP - FULL STACK</p>
-                  <p class="text-regular-gray">MINDHUB</p>
-                  <p class="text-light-gray">2019 - Completado</p>
+                <div class="container">
+                  <p class="fw-bold text-right">BOOTCAMP - FULL STACK</p>
+                  <p class="text-regular-gray text-right">MINDHUB</p>
+                  <p class="text-light-gray text-right">2019 - Completado</p>
                 </div>
-                <div class="container text-start">
+                <div class="container">
                   <p class="fw-bold">ENGLISH FOR DEVELOPERS COURSE</p>
                   <p class="text-regular-gray">POLO TIC MISIONES</p>
                   <p class="text-light-gray">2020 - Completado</p>
@@ -427,14 +447,14 @@
                   <span class="rounder"></span>
                   <span class="line"></span>
                 </div>
-                <div class="container text-start">
-                  <div class="container text-end">
-                    <p class="fw-bold">SCRUM COURSE</p>
-                    <p class="text-regular-gray">POLO TIC MISIONES</p>
-                    <p class="text-light-gray">2020 - Completado</p>
+                <div class="container">
+                  <div class="container">
+                    <p class="fw-bold text-right text-end">SCRUM COURSE</p>
+                    <p class="text-regular-gray text-end">POLO TIC MISIONES</p>
+                    <p class="text-light-gray text-end">2020 - Completado</p>
                   </div>
                 </div>
-                <div class="container text-start"></div>
+                <div class="container"></div>
                 <div class="d-flex justify-content-center">
                   <span class="rounder"></span>
                   <span class="line"></span>
