Education responsive for sm enhanced, Cv added to download,Learning section structure fixed, Landing imgs remplaced for Svg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="Federico caceres, developer, portfolio web, developer, front-end, desarrollador, trabajos, work, works, contacto, web, website"
     />
     <meta name="description" content="Federico Cáceres Dev website" />
-    <link rel="shortcut icon" href="resources/favicon.png">
+    <link rel="shortcut icon" href="resources/favicon.png" />
     <!-- ROBOTS GOOGLE -->
     <meta name="robots" content="index follow" />
     <!-- FACEBOOK META -->
@@ -57,7 +57,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Federico Cáceres</a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler p-0"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
@@ -79,10 +79,14 @@
               <a class="nav-link" aria-current="page" href="#sobre">Sobre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#habilidades">Hábilidades</a>
+              <a class="nav-link" aria-current="page" href="#habilidades"
+                >Hábilidades</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#proyectos">Proyectos</a>
+              <a class="nav-link" aria-current="page" href="#proyectos"
+                >Proyectos</a
+              >
             </li>
           </ul>
         </div>
@@ -94,22 +98,30 @@
       <section id="inicio">
         <div class="container">
           <div class="row">
-            <div class="col-12 col-md-8 col-lg-6 center">
+            <div class="col-12 col-md-12 col-lg-6 center">
               <div class="container">
-                <h2 class="fw-bold display-5">MI MISIÓN:</h2>
+                <h2 class="fw-bold display-4">Mi misión</h2>
                 <p>
-                  Ser el encargado del desarrollo de tu sitio web, desde la fase inicial de diseño, 
-                  el desarrollo del código y su despliegue para que comiences a expandirte por el mundo con tu emprendimiento o tu proyecto lo antes posible.
+                  Ser el encargado del desarrollo de tu sitio web, desde la fase
+                  inicial de diseño, el desarrollo del código y su despliegue
+                  para que comiences a expandirte por el mundo con tu
+                  emprendimiento o tu proyecto lo antes posible.
                 </p>
-                <div class="btn-container row">
+                <div class="btn-container">
                   <button type="button" class="btn-style">
-                    <a href="https://api.whatsapp.com/send?phone=541134883456&text=Hola+Fede%2C+quisiera+charlar+sobre+un+proyecto+cuando+tengas+un+momento+lo+hablamos%21+" target="_blank">
+                    <a
+                      href="https://api.whatsapp.com/send?phone=541134883456&text=Hola+Fede%2C+quisiera+charlar+sobre+un+proyecto+cuando+tengas+un+momento+lo+hablamos%21+"
+                      target="_blank"
+                    >
                       <span>WhatsApp</span>
                       <ion-icon name="logo-whatsapp"></ion-icon>
                     </a>
                   </button>
                   <button type="button" class="btn-style btn-dark">
-                    <a href="mailto:caceresfederico@hotmail.com?subject = Proyecto Web&body = Message" target="_blank">
+                    <a
+                      href="mailto:caceresfederico@hotmail.com?subject=ProyectoWeb&body=Message"
+                      target="_blank"
+                    >
                       <span>E-mail</span>
                       <ion-icon name="mail-unread-outline"></ion-icon>
                     </a>
@@ -120,7 +132,7 @@
             <div class="col-12 col-md-4 col-lg-6 center">
               <div class="container d-flex justify-content-end">
                 <img
-                  src="./resources/space-home.png"
+                  src="./resources/home.png"
                   class="landing-img"
                   alt="astronaut saying hello"
                 />
@@ -130,14 +142,13 @@
         </div>
       </section>
 
-
       <!-- ABOUT SECTION -->
       <section class="center" id="sobre">
         <div class="container fade mw-80vw">
           <div class="row">
             <div class="col-12 col-md-5">
               <img
-                src="./resources/space.png"
+                src="./resources/about.png"
                 alt="astronaut hanging moon"
                 class="img-fluid"
               />
@@ -147,23 +158,28 @@
             >
               <div class="text-container">
                 <div class="container pt-5">
-                  <h2 class= display-5 fw-bold text-uppercase">
-                    Conóceme
-                  </h2>
+                  <h2 class="display-4 fw-bold">Conóceme</h2>
                   <h4 class="fw-bold"><i>Desarrollador Front-end</i></h4>
+                  <span class="badge">Diseño web</span>
+                  <span class="badge">Diseño UX/UI </span>
+                  <span class="badge">Codificación</span>
+                  <span class="badge">Despliegue</span>
+                  <span class="badge">Asesoría</span>
                 </div>
                 <p>
-                  Soy desarrollador front-end autodidacta de 28 años, 
-                  con muchas ganas de seguir aprendiendo lo
-                  necesario para transitar por el camino del desarrollo web,
-                  logrando a futuro desenvolverme profesionalmente como un
-                  desarrollador
+                  Soy desarrollador front-end autodidacta de 28 años, con muchas
+                  ganas de seguir aprendiendo lo necesario para transitar por el
+                  camino del desarrollo web, logrando a futuro desenvolverme
+                  profesionalmente como un desarrollador
                   <span class="fw-bold">full-stack</span> haciendome de la
                   experiencia a través de proyectos que satisfagan su necesidad
                   actual.
                 </p>
                 <button type="button" class="btn-style btn-purple">
-                  <a href="./resources/">
+                  <a
+                    href="./resources/Cáceres-Federico-cv.pdf"
+                    download="Cáceres Federico Cv"
+                  >
                     <span>Descargar</span>
                     <ion-icon name="send-outline"></ion-icon>
                   </a>
@@ -174,12 +190,11 @@
         </div>
       </section>
 
-
       <!-- SKILLS SECTION -->
       <section id="habilidades" class="fade">
         <div class="container mw-80vw">
-          <div class="py-5 mw-100">
-            <h2 class="text-center display-5 fw-bold">Hábilidades</h2>
+          <div class="py-5">
+            <h2 class="text-center display-4 fw-bold">Hábilidades</h2>
             <h4 class="text-center fw-bold">Nivel técnico</h4>
           </div>
           <div class="container mw-100-percent">
@@ -209,7 +224,11 @@
                     >
                       <div class="accordion-body">
                         <div class="accordion-title">
-                          <img src="./resources/html-5.png" class="icon" alt="Html5 icon">
+                          <img
+                            src="./resources/html-5.png"
+                            class="icon"
+                            alt="Html5 icon"
+                          />
                           <p>Html5</p>
                         </div>
                         <div class="progress">
@@ -225,7 +244,11 @@
                           </div>
                         </div>
                         <div class="accordion-title">
-                          <img src="./resources/css-3.png" class="icon" alt="Css3 icon">
+                          <img
+                            src="./resources/css-3.png"
+                            class="icon"
+                            alt="Css3 icon"
+                          />
                           <p>Css3</p>
                         </div>
                         <div class="progress">
@@ -241,7 +264,11 @@
                           </div>
                         </div>
                         <div class="accordion-title">
-                          <img src="./resources/bootstrap.svg" class="icon" alt="Bootstrap icon">
+                          <img
+                            src="./resources/bootstrap.svg"
+                            class="icon"
+                            alt="Bootstrap icon"
+                          />
                           <p>Bootstrap</p>
                         </div>
                         <div class="progress">
@@ -257,7 +284,11 @@
                           </div>
                         </div>
                         <div class="accordion-title">
-                          <img src="./resources/js.png" class="icon" alt="javascript icon">
+                          <img
+                            src="./resources/js.png"
+                            class="icon"
+                            alt="javascript icon"
+                          />
                           <p>Javascript</p>
                         </div>
                         <div class="progress">
@@ -278,7 +309,7 @@
                 </div>
               </div>
               <!-- DEV TOOLS PROGRESS -->
-              <div class="col-12 col-md-6 mb-5"> 
+              <div class="col-12 col-md-6 mb-5">
                 <div class="accordion">
                   <div class="accordion-item with-80-percent">
                     <h2 class="accordion-header" id="headingTwo">
@@ -304,7 +335,11 @@
                     >
                       <div class="accordion-body">
                         <div class="accordion-title">
-                          <img src="./resources/git.png" class="icon" alt="Git icon">
+                          <img
+                            src="./resources/git.png"
+                            class="icon"
+                            alt="Git icon"
+                          />
                           <p>Git</p>
                         </div>
                         <div class="progress">
@@ -321,7 +356,11 @@
                         </div>
                         <div class="accordion-title">
                           <div class="accordion-title">
-                            <img src="./resources/terminal.png" class="icon" alt="Terminal icon">
+                            <img
+                              src="./resources/terminal.png"
+                              class="icon"
+                              alt="Terminal icon"
+                            />
                             <p>Cmd</p>
                           </div>
                         </div>
@@ -346,14 +385,18 @@
           </div>
 
           <!-- LEARNING -->
-          <div id="current-next" >
+          <div id="current-next">
             <div class="row">
               <div class="col-12">
                 <div class="container py-5">
-                  <h2 class="display-5 fw-bold">Aprendiendo</h2>
+                  <h2 class="display-4 fw-bold">aprendiendo</h2>
                 </div>
                 <div class="container">
-                  <img src="./resources/js.png" class="icon" alt="javascript icon">
+                  <img
+                    src="./resources/js.png"
+                    class="icon"
+                    alt="javascript icon"
+                  />
                   <div class="progress">
                     <div
                       class="progress-bar progress-bar-striped progress-bar-animated bg-primary"
@@ -368,7 +411,11 @@
                   </div>
                 </div>
                 <div class="container">
-                  <img src="./resources/figma.png" alt="Figma icon" class="icon">
+                  <img
+                    src="./resources/figma.png"
+                    alt="Figma icon"
+                    class="icon"
+                  />
                   <div class="progress">
                     <div
                       class="progress-bar progress-bar-striped progress-bar-animated bg-primary"
@@ -383,7 +430,7 @@
                   </div>
                 </div>
                 <div class="container">
-                  <img src="./resources/git.png" alt="Git icon" class="icon">
+                  <img src="./resources/git.png" alt="Git icon" class="icon" />
                   <div class="progress">
                     <div
                       class="progress-bar progress-bar-striped progress-bar-animated bg-primary"
@@ -401,18 +448,17 @@
             </div>
           </div>
 
-
           <!--  EDUCATION -->
           <div id="education" class="container fade">
             <div class="container pt-5">
-              <h2 class="text-center display-5 fw-bold py-5">
+              <h2 class="text-center display-4 fw-bold py-5">
                 <i class="fas fa-graduation-cap"></i> Educación
               </h2>
             </div>
             <div class="container center mw-100-percent">
               <div class="grid">
                 <div class="container">
-                  <p class="fw-bold">TÉCNICO EN SISTEMAS</p>
+                  <p class="fw-bold">TECNICATURA EN SISTEMAS</p>
                   <p class="text-regular-gray">IFTS N°4</p>
                   <p class="text-light-gray">2018 - Actual</p>
                 </div>
@@ -433,7 +479,7 @@
                   <p class="text-light-gray text-right">2019 - Completado</p>
                 </div>
                 <div class="container">
-                  <p class="fw-bold">ENGLISH FOR DEVELOPERS COURSE</p>
+                  <p class="fw-bold">CURSO DE INGLES PARA DESARROLLADORES</p>
                   <p class="text-regular-gray">POLO TIC MISIONES</p>
                   <p class="text-light-gray">2020 - Completado</p>
                 </div>
@@ -449,7 +495,7 @@
                 </div>
                 <div class="container">
                   <div class="container">
-                    <p class="fw-bold text-right text-end">SCRUM COURSE</p>
+                    <p class="fw-bold text-right text-end">CURSO SCRUM </p>
                     <p class="text-regular-gray text-end">POLO TIC MISIONES</p>
                     <p class="text-light-gray text-end">2020 - Completado</p>
                   </div>
@@ -464,10 +510,11 @@
             </div>
           </div>
 
-
           <!-- PROYECTOS -->
           <div class="fade mw-80vw">
-            <h2 class="display-5 fw-bold text-center py-5">Últimos proyectos</h2>
+            <h2 class="display-4 fw-bold text-center py-5">
+              Últimos proyectos
+            </h2>
             <div id="proyectos">
               <img src="./resources/proyect1.png" class="thumbnail" alt="" />
               <img src="./resources/proyect2.png" class="thumbnail" alt="" />
@@ -479,12 +526,18 @@
       </section>
     </main>
 
-    
     <!-- FOOTER -->
     <footer id="footer">
       <div id="social" class="mw-80vw">
-        <a href="https://github.com/CaceresFederico" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-        <a href="https://www.linkedin.com/in/federico-caceres95/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+        <a href="https://github.com/CaceresFederico" target="_blank"
+          ><ion-icon name="logo-github"></ion-icon
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/federico-caceres95/"
+          target="_blank"
+          ><ion-icon name="logo-linkedin"></ion-icon
+        ></a>
+      </div>
     </footer>
 
     <!-- TOP DOWN BUTTON -->
