--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             <div class="container center mw-100-percent">
               <div class="grid">
                 <div class="container">
-                  <p class="fw-bold">TECNICATURA EN SISTEMAS</p>
+                  <p class="fw-bold text-left">TECNICATURA EN SISTEMAS</p>
                   <p class="text-regular-gray">IFTS N°4</p>
                   <p class="text-light-gray">2018 - Actual</p>
                 </div>
@@ -479,7 +479,7 @@
                   <p class="text-light-gray text-right">2019 - Completado</p>
                 </div>
                 <div class="container">
-                  <p class="fw-bold">CURSO DE INGLES PARA DESARROLLADORES</p>
+                  <p class="fw-bold text-left">CURSO DE INGLES PARA DESARROLLADORES</p>
                   <p class="text-regular-gray">POLO TIC MISIONES</p>
                   <p class="text-light-gray">2020 - Completado</p>
                 </div>
@@ -516,9 +516,9 @@
               Últimos proyectos
             </h2>
             <div id="proyectos">
-              <img src="./resources/proyect1.png" class="thumbnail" alt="" />
+              <img src="./resources/proyect1.webp" class="thumbnail" alt="" />
               <img src="./resources/proyect2.png" class="thumbnail" alt="" />
-              <img src="./resources/proyect3.png" class="thumbnail" alt="" />
+              <img src="./resources/proyect3.jpg" class="thumbnail" alt="" />
               <img src="./resources/proyect4.png" class="thumbnail" alt="" />
             </div>
           </div>
