Inicio and Sobre section margin bottom fixed in sm resolution, Navbar items now will be showed by default, Proyects container now are one column

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               class="col-12 col-md-7 d-flex flex-column justify-content-center align-items-start"
             >
               <div class="text-container">
-                <div class="container pt-5">
+                <div class="container">
                   <h2 class="display-4 fw-bold">Conóceme</h2>
                   <h4 class="fw-bold"><i>Desarrollador Front-end</i></h4>
                   <span class="badge">Diseño web</span>
@@ -480,7 +480,7 @@
                 </div>
                 <div class="container">
                   <p class="fw-bold text-left">CURSO DE INGLES PARA DESARROLLADORES</p>
-                  <p class="text-regular-gray">POLO TIC MISIONES</p>
+                  <p class="text-regular-gray text-start">POLO TIC MISIONES</p>
                   <p class="text-light-gray">2020 - Completado</p>
                 </div>
                 <div class="d-flex justify-content-center">
@@ -511,11 +511,11 @@
           </div>
 
           <!-- PROYECTOS -->
-          <div class="fade mw-80vw">
+          <div class="fade mw-80vw" id="proyectos" >
             <h2 class="display-4 fw-bold text-center py-5">
               Últimos proyectos
             </h2>
-            <div id="proyectos">
+            <div class="proyectos-container">
               <img src="./resources/proyect1.webp" class="thumbnail" alt="" />
               <img src="./resources/proyect2.png" class="thumbnail" alt="" />
               <img src="./resources/proyect3.jpg" class="thumbnail" alt="" />
