--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   </a>
                 </button>
                 <button type="button" class="btn-style btn-dark">
-                  <a href="mailto:caceresfederico@hotmail.com?subject=ProyectoWeb&body=Message" target="_blank">
+                  <a href="#">
                     <span>E-mail</span>
                     <ion-icon name="mail-unread-outline"></ion-icon>
                   </a>
@@ -356,7 +356,7 @@
         </div>
 
         <!-- PROYECTOS -->
-        <div class="fade mw-80vw" id="proyectos">
+        <div class="mw-80vw" id="proyectos">
           <h2 class="display-4 fw-bold text-center py-5">
             Últimos proyectos
           </h2>
@@ -383,10 +383,10 @@
   <!-- TOP DOWN BUTTON -->
   <div id="topBotButton">
     <a href="#inicio">
-      <ion-icon class="btn-hover-disabled" name="chevron-up-outline"></ion-icon>
+      <ion-icon id="topBtn" class="btn-hover-disabled" name="chevron-up-outline"></ion-icon>
     </a>
     <a href="#footer">
-      <ion-icon class="btn-hover" name="chevron-down-outline"></ion-icon>
+      <ion-icon id="downBtn" class="btn-hover" name="chevron-down-outline"></ion-icon>
     </a>
   </div>
   <!-- MAIN JS -->
